--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,11 +7,19 @@
 {% block body %}
 <div class="container">
     <h1>Profile</h1>
-    <p>Username: {{ user }}</p>
+    <h1 class="txt_mod">
+            <img src="{{ user.userprofile.image.url }}" class="img_mod">
+
+            {{ user.username }}
+        </h1>
     <p>In game name: {{ user.userprofile.game_tag }}</p>
     <p>Region: {{ user.userprofile.region }}</p>
     <p>Ranked Flex: {{ user.userprofile.ranked_flex }}</p>
+    <p>Wins in flex queue: {{ user.userprofile.wins_flex }}</p>
+    <p>Losses in flex queue: {{ user.userprofile.losses_flex }}</p>
     <p>Ranked SoloQ: {{ user.userprofile.ranked_solo }}</p>
+    <p>Wins in solo queue: {{ user.userprofile.wins_solo }}</p>
+    <p>Wins in solo queue: {{ user.userprofile.losses_solo }}</p>
     <p>Description: {{ user.userprofile.description }}</p>
 </div>
 {% endblock %}
