--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,13 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2"
+                   type="search" placeholder="Search"
+                   aria-label="Search"
+                   name="search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
@@ -63,3 +70,6 @@
         {% endblock %}
     </body>
 </html>
+
+
+x`
