templates a posto, manca foto tasto home che é da decidere se fare o no, e manca foto profilo che per ora non va

--- a/profiles/templates/auth/logout.html
+++ b/profiles/templates/auth/logout.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 
+{% block head %}
+    <title>Nist</title>
+{% endblock %}
+
 {% block body %}
-<div class="container"></div>
-    <h1>Logout</h1>
-    <p>
+    <div class="container jumbotron jumbo_mod"
+         style="background-color: #770000; max-width: 1300px;">
+        <h1>Logged out</h1>
+        <p>
         You have logged out!
-    </p>
+        </p>
+    </div>
 {% endblock %}
