--- a/profiles/templates/auth/login.html
+++ b/profiles/templates/auth/login.html
@@ -1,17 +1,20 @@
 {% extends 'base.html' %}
 
+{% block head %}
+    <title>Nist</title>
+{% endblock %}
+
 {% block body %}
-    <br>
-<div class="container">
-    <h1>Welcome</h1>
-    <p>
-        You can log in here!
-    </p>
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Login</button>
-    </form>
-</div>
+    <div class="container jumbotron jumbo_mod"
+         style="background-color: #770000; max-width: 1300px;">
+        <h1>Welcome</h1>
+        <p>login here!</p>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+        <button class="btn btn-success" type="submit">Login</button>
+        </form>
+        <p></p>
+        <a href="/profiles/profile/edit/change-password/" style="color: white;">Forgot your password? reset it here!</a>
+    </div>
 {% endblock %}
