--- a/templates/static/css/home.css
+++ b/templates/static/css/home.css
@@ -26,167 +26,13 @@
     font-size: 14px;
 }
 
-.src_box_home__wrapper {
-    width: 100%;
-    height: 100%;
-}
-
-.src_box_home__input {
+.btn_src_box_home {
     display: inline-block;
-    -webkit-transition: box-shadow .4s ease, background .4s ease;
-    transition: box-shadow .4s ease, background .4s ease;
-    border: 0;
-    border-radius: 26px;
-    box-shadow: inset 0 0 0 2px #CCCCCC;
-    background: #FFFFFF;
-    padding: 0;
-    padding-right: 51px;
-    padding-left: 51px;
-    width: 100%;
-    height: 100%;
-    vertical-align: middle;
-    white-space: normal;
-    font-size: inherit;
-    -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-
-.src_box_home__input::-webkit-search-decoration, .sbx-custom__input::-webkit-search-cancel-button, .sbx-custom__input::-webkit-search-results-button, .sbx-custom__input::-webkit-search-results-decoration {
-    display: none;
-}
-
-.src_box_home__input:hover {
-    box-shadow: inset 0 0 0 2px #b3b3b3;
-}
-
-.src_box_home__input:focus, .sbx-custom__input:active {
-    outline: 0;
-    box-shadow: inset 0 0 0 2px #FF0000;
-    background: #FFFFFF;
-}
-
-.src_box_home__input::-webkit-input-placeholder {
-    color: #BBBBBB;
-}
-
-.src_box_home__input::-moz-placeholder {
-    color: #BBBBBB;
-}
-
-.src_box_home__input:-ms-input-placeholder {
-    color: #BBBBBB;
-}
-
-.src_box_home__input::placeholder {
-    color: #BBBBBB;
-}
-
-.src_box_home__submit {
     position: absolute;
-    top: 0;
-    right: inherit;
-    left: 0;
-    margin: 0;
-    border: 0;
-    border-radius: 25px 0 0 25px;
-    background-color: rgba(255, 255, 255, 0);
-    padding: 0;
-    width: 51px;
-    height: 100%;
-    vertical-align: middle;
-    text-align: center;
-    font-size: inherit;
-    -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.src_box_home__submit::before {
-    display: inline-block;
-    margin-right: -4px;
-    height: 100%;
-    vertical-align: middle;
-    content: '';
-}
-
-.src_box_home__submit:hover, .src_box_home__submit:active {
-    cursor: pointer;
-}
-
-.src_box_home__submit:focus {
-    outline: 0;
-}
-
-.src_box_home__submit svg {
-    width: 31px;
-    height: 31px;
-    vertical-align: middle;
-    fill: #1E62D0;
-}
-
-.src_box_home__reset {
-    display: none;
-    position: absolute;
-    top: 12px;
-    right: 12px;
-    margin: 0;
-    border: 0;
-    background: none;
-    cursor: pointer;
-    padding: 0;
-    font-size: inherit;
-    -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-    fill: rgba(0, 0, 0, 0.5);
-}
-
-.src_box_home__reset:focus {
-    outline: 0;
-}
-
-.src_box_home__reset svg {
-    display: block;
-    margin: 0px;
-    width: 19px;
-    height: 19px;
-}
-
-.src_box_home__input:valid ~ .src_box_home__reset {
-    display: block;
-    -webkit-animation-name: sbx-reset-in;
-          animation-name: sbx-reset-in;
-    -webkit-animation-duration: .15s;
-          animation-duration: .15s;
-}
-
-@-webkit-keyframes sbx-reset-in {
-    0% {
-    -webkit-transform: translate3d(-20%, 0, 0);
-            transform: translate3d(-20%, 0, 0);
-    opacity: 0;
-    }
-    100% {
-    -webkit-transform: none;
-            transform: none;
-    opacity: 1;
-    }
-}
-
-@keyframes sbx-reset-in {
-    0% {
-    -webkit-transform: translate3d(-20%, 0, 0);
-            transform: translate3d(-20%, 0, 0);
-    opacity: 0;
-    }
-    100% {
-    -webkit-transform: none;
-            transform: none;
-    opacity: 1;
-    }
+    left: 250px;
+    top: 0px;
+    width: 80px;
+    height: 40px;
 }
 
 .btn_login {
