--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,9 @@
                type="search" placeholder="Search"
                aria-label="Search"
                name="search">
-    </form><a href="{% url 'profiles:view_profile_with_pk' pk=pk%}" class="btn btn-outline-success my-2 my-sm-0 btn_src_box_home" role="button">Search</a>
+    <button class="btn btn-outline-success my-2 my-sm-0 btn_src_box_home" type="submit">Search</button>
+    </form>
+
 
 
 
