--- a/profiles/templates/profiles/signup_form.html
+++ b/profiles/templates/profiles/signup_form.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container jumbotron jumbo_mod">
+<div class="container jumbotron jumbo_mod" style="background-color: #770000;">
     <h1>Signup</h1>
         <form method="post">
             {% csrf_token %}
