--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -31,12 +31,18 @@
                     <p><b>First Name: </b></p>
                     <p><b>Last Name: </b></p>
                     <p><b>Email: </b></p>
+                    <p><b>Image:</b></p>
+                    <br>
+                    <p><b>Description: </b></p>
                 </div>
 
                 <div class="col">
                     <p>{{ form2.first_name }}</p>
                     <p>{{ form2.last_name }}</p>
                     <p>{{ form2.email }}</p>
+                    <p>{{ form.image }}</p>
+
+                    <p>{{ form.description }}</p>
                 </div>
             </div>
 
