--- a/templates/static/css/home.css
+++ b/templates/static/css/home.css
@@ -10,7 +10,7 @@
     left: 10px;
     height: 68px;
     width: 68px;
-    background-image: url('/media/profile_images/default.jpg');
+    background-image: url('/media/profile_images/default.png');
     background-size: 100%;
 }
 
